[package]
name = "entropy-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.15", features = ["csr"] }
web-sys = { version = "0.3", features = ["Window", "Navigator", "Location"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
phosphor-leptos = "0.8.0"
entropy-engine = { path = "../entropy-engine" }
wgpu = { version = "27.0.1", features = ["wgsl"] }
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.8.0", features = ["v4", "js"] }
leptos-use = { version = "0.16.3" }
wasm-timer = "0.2.5"
gloo-net = "0.6"
image = "0.25.9"
